--- a/CG-REACT-DEMO/cg-react-demo/package.json
+++ b/CG-REACT-DEMO/cg-react-demo/package.json
@@ -8,10 +8,11 @@
         "@testing-library/user-event": "^12.8.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router": "^5.2.1",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "web-vitals": "^1.1.2",
-        "axios": "^0.24.0",
-        "express": "^4.17.1"
+        "axios": "^0.21.4"
     },
     "scripts": {
         "start": "react-scripts start",
